added link to github repo

--- a/code/Project_Notebook_finished.ipynb
+++ b/code/Project_Notebook_finished.ipynb
@@ -52,7 +52,9 @@
       },
       "source": [
         "# Project Name: Backery sales prediction\n",
-        "We want to predict the sales of different products from a bakery. For example we show the results for one of the sold products."
+        "We want to predict the sales of different products from a bakery. For example we show the results for one of the sold products.\n",
+        "\n",
+        "Link to github repo: https://github.com/Testbild/BakerySalesPrediction_DeepLearningFromScratch_opencampusSH"
       ]
     },
     {
@@ -63,7 +65,8 @@
       "source": [
         "## Participants:\n",
         "Please list here all the participants alongside with any information you may want to be visible. This will be hosted on a opencampus.sh repository, so if you want to keep a connection to your github user include this information here.\n",
-        "\\\n",
+        "  \n",
+        "\n",
         "Christopher Hansen, Niko Schmidt, Amelie Schmücker, Samira Ferssioui"
       ]
     },
