--- a/code/Project_Notebook_finished.ipynb
+++ b/code/Project_Notebook_finished.ipynb
@@ -30,24 +30,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ieLaM5enT9kC"
-      },
-      "source": [
-        "---\n",
-        "## Note from the Teachers:\n",
-        "We added a header with information about your project. \n",
-        "This is useful since we want to keep a database of all the cool projects participants have made during the courses.\n",
-        "We will save the code in our database and host on github a page to show all the projects. Therefore it is more practical to add some information in the header of each notebook.\n",
-        "Thanks a lot for the understanding and for taking care of it.\n",
-        "\n",
-        "You can delete this cell if you want\n",
-        "\n",
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "yWOzx_RQT9kI"
       },
       "source": [
@@ -64,10 +46,9 @@
       },
       "source": [
         "## Participants:\n",
-        "Please list here all the participants alongside with any information you may want to be visible. This will be hosted on a opencampus.sh repository, so if you want to keep a connection to your github user include this information here.\n",
-        "  \n",
+        "Name - github user: \n",
         "\n",
-        "Christopher Hansen, Niko Schmidt, Amelie Schmücker, Samira Ferssioui"
+        "Christopher Hansen - Testbild, Niko Schmidt - Niko-ich, Amelie Schmücker - ameliesr, Samira Ferssioui - samiracodes"
       ]
     },
     {
